# covidwebhook

./: .gitignore  CMakeLists.txt  Dockerfile  cert.pem  crow_all.h  heroku.yml  key.pem  main.cpp  prov.json
commander/: httpclientcallback.hpp  redirectmessage.cpp  redirectmessage.hpp  sender.cpp  sender.hpp
controller/: requesthandler.cpp  requesthandler.hpp
models/: chat.cpp  chat.hpp  message.cpp  message.hpp
utils/: HttpClientCallback.hpp  httpclient.cpp  httpclient.hpp  jsonconverter.hpp  utils.hpp
